cluster/apps/networking/echo-server/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app echo-server
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  selector:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
