cluster/apps/networking/echo-server/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app echo-server
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  annotations:
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
    external-dns/is-public: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: &host "echo-server.${SECRET_PUBLIC_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: *app
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
